Add test suite and basic test

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "author": "John Teske",
   "license": "MIT",
-  "dependencies": {
-    "prettier": "^2.0.5"
+  "devDependencies": {
+    "prettier": "^2.0.5",
+    "tape": "^5.0.0",
+    "tape-promise": "^4.0.0"
   }
 }
