--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "flat file database for johnteskemusic.com and related sites",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests.js"
   },
   "author": "John Teske",
   "license": "MIT",
