Add basic recordings json

--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
   "description": "flat file database for johnteskemusic.com and related sites",
   "main": "index.js",
   "scripts": {
-    "fmt": "prettier *.js --write",
+    "fmt": "npx prettier *.js data/**/*.json --write",
     "test": "node tests.js"
   },
   "author": "John Teske",
   "license": "MIT",
   "devDependencies": {
-    "prettier": "^2.0.5",
     "tape": "^5.0.0",
     "tape-promise": "^4.0.0",
     "ts.data.json": "^1.1.0"
